change passenger_name field to passenger_fname and passenger_lname to be compatible with User schema.
